# tweeta-cli

./: .gitignore  AGENTS.md  Makefile  Makefile.in  README.md  ROUTES.md  configure  configure.ac  package.json
.github/workflows/: release.yml
scripts/: build-release.sh  prepack.js
skills/tweeta-cli/: SKILL.md
skills/tweeta-cli/agents/: openai.yaml
skills/tweeta-cli/references/: route-discovery.md
src/: commands.c  config.c  http.c  jsonfmt.c  main.c  routes.c  tweeta.h  util.c
